<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"

        tools:menu="@menu/stations_list_menu"
        >


    <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tablayout"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="8px">

        <com.google.android.material.tabs.TabItem
                android:text="@string/petrol"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        <com.google.android.material.tabs.TabItem
                android:text="@string/diesel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

        <com.google.android.material.tabs.TabItem
                android:text="@string/gas"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/viewpager">

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>

